--- a/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,19 @@
-﻿<div style="border: 1px solid red">dashboard Component</div>
+<div>
+  <widget-area></widget-area>
+</div>
+
+<mat-divider></mat-divider>
+
+<div>
+  <div>Line Chart</div>
+  <div>Line Chart</div>
+  <div>Line Chart</div>
+  <div>Line Chart</div>
+</div>
+
+<mat-divider></mat-divider>
+
+<div>
+  <div>Table</div>
+  <div>Pie Chart</div>
+</div>
