--- a/ClientApp/src/app/layouts/default/default.component.html
+++ b/ClientApp/src/app/layouts/default/default.component.html
@@ -1,5 +1,10 @@
-<header>Header</header>
-
-
-<router-outlet></router-outlet>
-<footer>Footer</footer>
+<shared-header (toggleMySideBar)="sideBarToggler($event)"></shared-header>
+  <mat-drawer-container>
+    <mat-drawer mode="side" [opened] = "sideBarOpen">
+      <shared-sidebar></shared-sidebar>
+    </mat-drawer>
+    <mat-drawer-content>
+      <router-outlet></router-outlet>
+    </mat-drawer-content>
+  </mat-drawer-container>
+<shared-footer></shared-footer>
