--- a/ClientApp/src/app/shared/footer/footer.component.html
+++ b/ClientApp/src/app/shared/footer/footer.component.html
@@ -1,1 +1,5 @@
-﻿<div style="border: 1px solid red">footer Component</div>
+<mat-divider></mat-divider>
+
+<footer>
+  &copy; All rights reserved 2021
+</footer>
