--- a/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ClientApp/src/app/dashboard/dashboard.component.html
@@ -4,16 +4,19 @@
 
 <mat-divider></mat-divider>
 
-<div>
+<!--<div>
   <div>Line Chart</div>
   <div>Line Chart</div>
   <div>Line Chart</div>
   <div>Line Chart</div>
-</div>
+</div>-->
 
 <mat-divider></mat-divider>
 
-<div>
+
+
+
+<!--<div>
   <div>Table</div>
   <div>Pie Chart</div>
-</div>
+</div>-->
