--- a/ClientApp/src/app/terminals/terminals.component.html
+++ b/ClientApp/src/app/terminals/terminals.component.html
@@ -1,1 +1,47 @@
-﻿<div style="border: 1px solid red">terminals Component</div>
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+  <!-- Position Column -->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="campaign_Name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Compaign </th>
+    <td mat-cell *matCellDef="let element"> {{element.campaign_Name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="last_Online">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Last online </th>
+    <td mat-cell *matCellDef="let element"> {{element.last_Online}} </td>
+  </ng-container>  
+
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="note">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Note </th>
+    <td mat-cell *matCellDef="let element"> {{element.note}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
